--- a/s-services.html
+++ b/s-services.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" prefix="og: http://ogp.me/ns#">
 <head class="no-js">
     <meta charset="UTF-8">
     <title>Valtira | S-Services</title>
+    <meta property="og:title" content="We do work that matters"/>
+    <meta property="og:type" content="Welcome to Valtira"/>
+    <meta property="og:url" content="http://www.valtira.net/"/>
+    <meta property="og:image" content="http://www.valtira.net/img/su4.jpg"/>
+    <meta property="og:site_name" content="Valtira"/>
+    <meta property="og:description" content="We challenge benchmarks &amp; push boundaries"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.lazyView.css">
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -18,21 +24,17 @@
 <body>
 
 <!-- nav -->
-
-<div class="lazyView" style="visibility: hidden">
 <nav class="topNav">
     <ul>
-        <li><a href="#" burger="01" class="hamburger-trigger"></a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="index.html">Home</a></li>
+        <li class="lazyView" style="visibility: hidden"><a href="#" burger="01" class="hamburger-trigger"></a></li>
+        <li class="lazyView" style="visibility: hidden"><a href="contact.html">Contact</a></li>
+        <li class="lazyView" style="visibility: hidden"><a href="about.html">About</a></li>
+        <li class="lazyView" style="visibility: hidden"><a href="work.html">Work</a></li>
+        <li class="lazyView" style="visibility: hidden"><a href="services.html">Services</a></li>
+        <li class="lazyView" style="visibility: hidden"><a href="index.html" class="active">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
     </ul>
 </nav>
-</div>
-
 <!-- side popup nav -->
 
 <aside class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right" id="cbp-spmenu-s2">
