scroll to top arrow added

--- a/careers.html
+++ b/careers.html
@@ -19,6 +19,7 @@
     <link rel='stylesheet' type="text/css" href="css/animations.css" />
 </head>
 <body>
+<a href="#0" class="cd-top">Top</a>
 
 <!-- nav -->
 <nav class="topNav">
