--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <![endif]-->
 </head>
 <body>
+<a href="#0" class="cd-top">Top</a>
 
 <!-- nav -->
 <nav class="topNav">
@@ -351,6 +352,5 @@
         $('.lazyView').lazyView();
 
     });// end scripts
-
 </script>
 </html>
