--- a/about.html
+++ b/about.html
@@ -247,10 +247,10 @@
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
             <ul class="footer-social">
-                <a href="https://twitter.com/valtira" target="_blank"><li class="social-circles"><i class="fa fa-twitter fa-2x"></i></li></a>&nbsp;
-                <a href="https://www.facebook.com/ValtiraLLC/" target="_blank"><li class="social-circles"><i class="fa fa-facebook fa-2x"></i></li></a>&nbsp;
-                <a href="https://www.linkedin.com/company/valtira" target="_blank"><li class="social-circles"><i class="fa fa-linkedin fa-2x"></i></li></a>&nbsp;
-                <a href="https://plus.google.com/+ValtiraLLC/posts" target="_blank"><li class="social-circles"><i class="fa fa-google-plus fa-2x"></i></li></a>
+                <a href="http://twitter.com/valtira" target="_blank"><li class="social-circles"><i class="fa fa-twitter fa-2x"></i></li></a>&nbsp;
+                <a href="http://www.facebook.com/ValtiraLLC/" target="_blank"><li class="social-circles"><i class="fa fa-facebook fa-2x"></i></li></a>&nbsp;
+                <a href="http://www.linkedin.com/company/valtira" target="_blank"><li class="social-circles"><i class="fa fa-linkedin fa-2x"></i></li></a>&nbsp;
+                <a href="http://plus.google.com/+ValtiraLLC/posts" target="_blank"><li class="social-circles"><i class="fa fa-google-plus fa-2x"></i></li></a>
             </ul>
             <small>1201 S. Marquette Avenue #330 Minneapolis, Minnesota 55403   |   &copy; 2015 Valtira LLC </small>
         </div>
@@ -261,15 +261,6 @@
 
 <!-- scripts -->
 
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/jquery.lazyView.js"></script>
-<script type="text/javascript" src="js/modernizr.custom.js"></script>
-<script type="text/javascript" src="js/classie.js"></script>
-<script type="text/javascript" src="js/custom.js"></script>
-<script type="text/javascript" src="js/jquery.ba-cond.min.js"></script>
-<script type="text/javascript" src="js/jquery.slitslider.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript" src="js/main.min.js"></script>
 <script type="text/javascript" src="js/pinwheel.js"></script>
-<script type="text/javascript" src="js/stepsForm.js"></script>
 </html>
