minified pinwheel.min.js

--- a/contact.html
+++ b/contact.html
@@ -231,5 +231,5 @@
 <!-- scripts -->
 
 <script type="text/javascript" src="js/main.min.js"></script>
-<script type="text/javascript" src="js/pinwheel.js"></script>
+<script type="text/javascript" src="js/pinwheel.min.js"></script>
 </html>
