--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             </ul>
             <small>1201 S. Marquette Avenue #330 Minneapolis, Minnesota 55403   |   &copy; 2015 Valtira LLC </small>
         </div>
-    </div>
+    </div>s
 </div>
 </footer>
 </body>
@@ -304,5 +304,5 @@
 <!-- scripts -->
 
 <script type="text/javascript" src="js/main.min.js"></script>
-<script type="text/javascript" src="js/pinwheel.js"></script>
+<script type="text/javascript" src="js/pinwheel.min.js"></script>
 </html>
