--- a/services.html
+++ b/services.html
@@ -278,5 +278,5 @@ FOR GRID: IMAGE SIZE MUST ALL BE SAME: 825 X 550
 <!-- scripts -->
 
 <script type="text/javascript" src="js/main.min.js"></script>
-<script type="text/javascript" src="js/pinwheel.js"></script>
+<script type="text/javascript" src="js/pinwheel.min.js"></script>
 </html>
