--- a/s-services.html
+++ b/s-services.html
@@ -357,5 +357,5 @@
 <!-- scripts -->
 
 <script type="text/javascript" src="js/main.min.js"></script>
-<script type="text/javascript" src="js/pinwheel.js"></script>
+<script type="text/javascript" src="js/pinwheel.min.js"></script>
 </html>
