fixed typo in footer

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             </ul>
             <small>1201 S. Marquette Avenue #330 Minneapolis, Minnesota 55403   |   &copy; 2015 Valtira LLC </small>
         </div>
-    </div>s
+    </div>
 </div>
 </footer>
 </body>
